Terraform_project_2/Foundation/asg-sg.tf
# Security Group in Default VPC
resource "aws_security_group" "asg_sg" {
  name        = "terraform-asg-sg"
  description = "Allow HTTP and SSH"
  vpc_id      = aws_default_vpc.default-vpc.id

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "my-terraform-asg-sg"
  }
}
